feat: Added new routes
- _/post/excerpts_ results in a list of every post with
  name and an excerpt of its content (default: 50 chars)
- _/post/index/:n returns the n'th post. Allows negative
  values to get the n'th last post
- Updated openapi.yaml
